rbac/resources.yaml
- apiVersion: v1
  kind: Pod
- apiVersion: policy/v1beta1
  kind: PodDisruptionBudget
- apiVersion: v1
  kind: ServiceAccount
- apiVersion: v1
  kind: Secret
- apiVersion: v1
  kind: ConfigMap
- apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
- apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
- apiVersion: v1
  kind: Service
- apiVersion: apps/v1
  kind: Deployment
- apiVersion: autoscaling/v2beta2
  kind: HorizontalPodAutoscaler
- apiVersion: apps/v1
  kind: StatefulSet
- apiVersion: loc.fst.network/v1alpha4
  kind: APIGateway
- apiVersion: loc.fst.network/v1alpha4
  kind: Runtime
