rbac/istio.yaml
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
